# p2gan

./: .gitignore  .gitignore_recommended  AI_PROMPT_EXAMPLE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  publish.yml
docs/: CHANGES_2025_10_06.md  GANTTPROJECT_CAPABILITIES.md  KANBAN.md  RESOURCES_COSTS_UPDATE_2025_10_06.md  RESOURCES_CUSTOM_FIELDS_ANALYSIS.md  TASK_ANALYSIS_FROM_REAL_FILE.md  TASK_ATTRIBUTES_MAPPING.md  analyze_project_history.md  date_histogram.md  gantt_converter_instructions.md  project_stats.md
examples/: ai_agent_example.py  analyze_git_project.py  analyze_project_history.py  basic_usage.py  from_markdown_plan.py  llm_orchestration_example.py
samples/: ganttproject_auto_analysis.gan  ganttproject_self_analysis.gan  sample_project.gan  sample_project.md  sample_project_md.md
samples/sample_python_package/: CHANGELOG.md  HOW_TO_ANALYZE.md  README.md  generate_weatherapi_gantt.py  pyproject.toml  weatherapi_llm_analysis.gan
samples/sample_python_package/DOT_git/: COMMIT_EDITMSG  index
samples/sample_python_package/DOT_git/logs/: HEAD
samples/sample_python_package/DOT_git/refs/heads/: main
samples/sample_python_package/docs/: api_reference.md  user_guide.md
samples/sample_python_package/tests/: test_cache.py  test_client.py  test_models.py
samples/sample_python_package/weatherapi/: __init__.py  cache.py  client.py  models.py  providers.py  rate_limiter.py
src/p2gan/: README.md  __init__.py  __main__.py  analyzer.py  cli.py  date_histogram.py  generator.py  models.py  parser.py  project_history.py  project_stats.py  stakeholders.py
tests/: __init__.py  run_tests.py  test_generator.py  test_models.py  test_parser.py
