[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherapi-client"
version = "0.2.0"
description = "Python client for weather data APIs"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Weather Team", email = "team@weather.example.com"},
]
keywords = ["weather", "api", "client", "forecast"]

dependencies = [
    "requests>=2.28.0",
    "aiohttp>=3.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
